syntax = "proto3";
package notification.v1;
option go_package = "./pb;notification_pb";

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string user_id = 1;
  string title = 2;
  string message = 3;
}

message NotificationResponse {
  bool success = 1;
}